--- a/index.html
+++ b/index.html
@@ -13,12 +13,34 @@
 
 <body>
 
+    <div class="container">
+        <div class="game-card">
+            <h3 class="game-card_title">Theory Trainer</h3>
+            <fieldset>
+                <legend>Question One</legend>
+                
+                <div>
+                    <p id="question" class="question">This is the place where the question will be, right?</p>
+                </div>
+                <div>
+                <input type="radio" name="option1" id="option1">
+                <label for="option1">answer one</label>
+                <input type="radio" name="option2" id="option1">
+                <label for="option2">answer two</label>
+                <input type="radio" name="option3" id="option1">
+                <label for="option3">answer three</label>
+                <input type="radio" name="option4" id="option1">
+                <label for="option4">answer four</label>
+            </div>
+            </fieldset>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="script.js"></script>
-
 </body>
 
 </html>
