--- a/index.html
+++ b/index.html
@@ -13,26 +13,35 @@
 
 <body>
 
-    <div class="container">
-        <div class="game-card">
-            <h3 class="game-card_title">Theory Trainer</h3>
+    <div class="container d-flex justify-content-center align-items-center">
+        <div class="card game-card" style="width: 30rem;">
+            <div class="card-title card-header">
+                <h3 class=" game-card_title">Theory Trainer</h3>
+            </div>
+            <div class="card-body">
             <fieldset>
                 <legend>Question One</legend>
-                
                 <div>
                     <p id="question" class="question">This is the place where the question will be, right?</p>
                 </div>
                 <div>
-                <input type="radio" name="option1" id="option1">
-                <label for="option1">answer one</label>
-                <input type="radio" name="option2" id="option1">
-                <label for="option2">answer two</label>
-                <input type="radio" name="option3" id="option1">
-                <label for="option3">answer three</label>
-                <input type="radio" name="option4" id="option1">
-                <label for="option4">answer four</label>
-            </div>
+                    <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><input type="radio" name="option1" id="option1">
+                    <label for="option1">answer one</label></li>
+
+                    <li class="list-group-item"><input type="radio" name="option2" id="option1">
+                    <label for="option2">answer two</label></li>
+
+                    <li class="list-group-item"><input type="radio" name="option3" id="option1">
+                    <label for="option3">answer three</label></li>
+
+                    <li class="list-group-item"><input type="radio" name="option4" id="option1">
+                    <label for="option4">answer four</label></li>
+                </ul>
+                </div>
             </fieldset>
+            <button>Enter</button>
+        </div>
         </div>
     </div>
 
