--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/5e1dc9491f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
@@ -12,6 +13,12 @@
 </head>
 
 <body>
+    <nav class="nav">
+        <a href="#" class="navbar-brand">
+            <i class="fa-solid fa-laptop-code d-inline-block align-top"></i>
+            Theory Trainer
+        </a>
+    </nav>
 
     <div class="container d-flex justify-content-center align-items-center">
         <div class="card game-card" style="width: 30rem;">
@@ -24,7 +31,7 @@
                 <div>
                     <p id="question" class="question">This is the place where the question will be, right?</p>
                 </div>
-                <div>
+                <div class="answers">
                     <ul class="list-group list-group-flush">
                     <li class="list-group-item"><input type="radio" name="option1" id="option1">
                     <label for="option1">answer one</label></li>
@@ -40,7 +47,7 @@
                 </ul>
                 </div>
             </fieldset>
-            <button>Enter</button>
+            <button class="mt-1">Enter</button>
         </div>
         </div>
     </div>
