--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <nav class="nav">
         <a href="#" class="navbar-brand">
             <i class="fa-solid fa-laptop-code d-inline-block align-top"></i>
-            Theory Trainer
         </a>
+        <h1>Theory Trainer</h1>
     </nav>
 
     <div class="container d-flex justify-content-center align-items-center">
         <div class="card game-card" style="width: 30rem;">
             <div class="card-title card-header">
-                <h3 class=" game-card_title">Theory Trainer</h3>
+                <h2 class=" game-card_title">JavaScript / HTML/ CSS</h2>
             </div>
             <div class="card-body">
             <fieldset>
@@ -31,23 +31,25 @@
                 <div>
                     <p id="question" class="question">This is the place where the question will be, right?</p>
                 </div>
-                <div class="answers">
-                    <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><input type="radio" name="option1" id="option1">
+                <div class="answers form-check">
+                    <ul>
+                    <li><input  type="radio" name="option1" id="option1">
                     <label for="option1">answer one</label></li>
 
-                    <li class="list-group-item"><input type="radio" name="option2" id="option1">
+                    <li><input type="radio" name="option2" id="option2">
                     <label for="option2">answer two</label></li>
 
-                    <li class="list-group-item"><input type="radio" name="option3" id="option1">
+                    <li><input type="radio" name="option3" id="option3">
                     <label for="option3">answer three</label></li>
 
-                    <li class="list-group-item"><input type="radio" name="option4" id="option1">
+                    <li><input type="radio" name="option4" id="option4">
                     <label for="option4">answer four</label></li>
                 </ul>
                 </div>
             </fieldset>
-            <button class="mt-1">Enter</button>
+            <div class="d-grid gap-2">
+            <button class="btn btn-primary mt-1" type="button">Enter</button>
+        </div>
         </div>
         </div>
     </div>
