fix radio input bug

--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
                     <p id="question" class="question">This is the place where the question will be, right?</p>
                 </div>
                 <div class="answers form-check">
-                    <ul>
-                    <li><input  type="radio" name="option1" id="option1">
+                    <ul class="answers" id="answers">
+                    <li><input  type="radio" name="answer" id="option1">
                     <label for="option1">answer one</label></li>
 
-                    <li><input type="radio" name="option2" id="option2">
+                    <li><input type="radio" name="answer" id="option2">
                     <label for="option2">answer two</label></li>
 
-                    <li><input type="radio" name="option3" id="option3">
+                    <li><input type="radio" name="answer" id="option3">
                     <label for="option3">answer three</label></li>
 
-                    <li><input type="radio" name="option4" id="option4">
+                    <li><input type="radio" name="answer" id="option4">
                     <label for="option4">answer four</label></li>
                 </ul>
                 </div>
             </fieldset>
             <div class="d-grid gap-2">
-            <button class="btn btn-primary mt-1" type="button">Enter</button>
+            <button class="btn btn-primary mt-1" type="button" id="submit_answer">Enter</button>
         </div>
         </div>
         </div>
