create question array

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                 </div>
                 <div class="answers form-check">
                     <ul class="answers" id="answers">
-                    <li><input  type="radio" name="answer" id="option1">
+                    <li><input class="user-answer"  type="radio" name="answer" value="option1" id="option1">
                     <label for="option1">answer one</label></li>
 
-                    <li><input type="radio" name="answer" id="option2">
+                    <li><input class="user-answer" type="radio" name="answer" value="option2" id="option2">
                     <label for="option2">answer two</label></li>
 
-                    <li><input type="radio" name="answer" id="option3">
+                    <li><input class="user-answer" type="radio" name="answer" value="option3" id="option3">
                     <label for="option3">answer three</label></li>
 
-                    <li><input type="radio" name="answer" id="option4">
+                    <li><input class="user-answer" type="radio" name="answer" value="option4" id="option4">
                     <label for="option4">answer four</label></li>
                 </ul>
                 </div>
