--- a/index.html
+++ b/index.html
@@ -13,17 +13,28 @@
 </head>
 
 <body>
-    <nav class="nav">
-        <a href="#" class="navbar-brand">
+    <nav class="navbar navbar-expand navbar-dark bg-primary">
+        <div class="container">
+        <a href="#" class="navbar-brand ">
             <i class="fa-solid fa-laptop-code d-inline-block align-top"></i>
         </a>
+        <div class="container">
+            <ul class=" d-inline-flex navbar-nav">
+                <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Useful Links</a></li>
+            </ul>
+        </div>
+        <div class="container-fluid d-flex justify-content-end">
         <h1>Theory Trainer</h1>
+    </div>
+    </div>
     </nav>
 
     <div class="container d-flex justify-content-center align-items-center">
         <div class="card game-card" style="width: 30rem;">
             <div class="card-title card-header">
-                <h2 class=" game-card_title">JavaScript / HTML/ CSS</h2>
+                <h2 class=" game-card_title">JavaScript / HTML / CSS</h2>
             </div>
             <div class="card-body">
             <fieldset>
