--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand navbar-dark bg-primary">
+    <nav class="navbar navbar-expand navbar-dark bg-primary fixed-top header">
         <div class="container">
-        <a href="#" class="navbar-brand ">
-            <i class="fa-solid fa-laptop-code d-inline-block align-top"></i>
-        </a>
+        
         <div class="container">
             <ul class=" d-inline-flex navbar-nav">
                 <li class="nav-item"><a href="" class="nav-link">Home</a></li>
@@ -34,11 +32,11 @@
     <div class="container d-flex justify-content-center align-items-center">
         <div class="card game-card" style="width: 30rem;">
             <div class="card-title card-header">
-                <h2 class=" game-card_title">JavaScript / HTML / CSS</h2>
+                <h2 class=" game-card_title" id="category_display">JavaScript / HTML / CSS</h2>
             </div>
             <div class="card-body">
             <fieldset>
-                <legend>Question One</legend>
+                <legend class="question-text" id="queston_text">Question One</legend>
                 <div>
                     <p id="question" class="question">This is the place where the question will be, right?</p>
                 </div>
@@ -64,6 +62,16 @@
         </div>
         </div>
     </div>
+
+    <nav class="navbar navbar-expand navbar-dark bg-secondary fixed-bottom footer">
+        <div class="container d-flex justify-content-center">
+            <ul class=" d-inline-flex navbar-nav justify-content-center">
+                <li class="nav-item"><a href="" class="nav-link"><i class="fa-brands fa-github"></i></a></li>
+                <li class="nav-item"><a href="" class="nav-link"><i class="fa-brands fa-discord"></i></a></li>
+                <li class="nav-item"><a href="" class="nav-link"><i class="fa-brands fa-hackerrank"></i></a></li>
+            </ul>
+    </div>
+    </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
