--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/5e1dc9491f.js" crossorigin="anonymous"></script>
+    <script defer src="https://kit.fontawesome.com/5e1dc9491f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
@@ -36,9 +36,9 @@
             </div>
             <div class="card-body">
             <fieldset>
-                <legend class="question-text" id="queston_text">Question One</legend>
+                <legend class="question-number" id="queston_number">Question <span>1</span></legend>
                 <div>
-                    <p id="question" class="question">This is the place where the question will be, right?</p>
+                    <p id="question_text" class="question-text">This is the place where the question will be, right?</p>
                 </div>
                 <div class="answers form-check">
                     <ul class="answers" id="answers">
